--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "connected-react-router": "^4.5.0",
+    "history": "^4.7.2",
+    "mui-datatables": "^2.0.0-beta-54",
+    "prop-types": "^15.7.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-redux": "^5.1.1",
@@ -26,8 +30,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "serve": "^10.1.2",
-    "history": "^4.7.2"
+    "serve": "^10.1.2"
   },
   "browserslist": [
     ">0.2%",
