--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/icons": "^3.0.2",
     "connected-react-router": "^4.5.0",
     "history": "^4.7.2",
+    "lodash": "^4.17.11",
     "mui-datatables": "^2.0.0-beta-54",
     "prop-types": "^15.7.2",
     "react": "^16.8.1",
