--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "cy:open": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "plugins": [
+      "cypress"
+    ],
+    "env": {
+      "cypress/globals": true
+    }
   },
   "devDependencies": {
-    "prettier": "^1.16.4",
-    "react-scripts": "^2.1.5",
-    "eslint": "5.12.0"
+    "cypress": "^3.1.5",
+    "eslint": "5.12.0",
+    "eslint-plugin-cypress": "^2.2.0",
+    "react-scripts": "^2.1.5"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
